--- a/code/keenen/flask_css_html/lab1-bio/index.html
+++ b/code/keenen/flask_css_html/lab1-bio/index.html
@@ -34,7 +34,7 @@
             <a 
                 class="link"
                 target="_blank" 
-                href="https://en.wikipedia.or/wiki/Jane_Goodall"
+                href="https://en.wikipedia.org/wiki/Jane_Goodall"
             >
                 here
             </a> 
