--- a/code/adam/HTML_CSS_FLASK/lab1Bio/index.html
+++ b/code/adam/HTML_CSS_FLASK/lab1Bio/index.html
@@ -11,8 +11,7 @@
     
 </head>
   <body>
-    <h1>Lets talk about TONY DANZA!
-    </h1>
+    <h1>Lets talk about TONY DANZA!</h1>
     <h3>The tap dance extravaganza</h3>
     <hr />
         <img src="tonydanza.jpg" alt="sorry! 😢failed to load">
@@ -20,15 +19,19 @@
             <br/>
             Learn about Tony here
         </a> 
-        <p class="intro"> Danza was born in Brooklyn, New York,[1] to parents Anna Mary (née Camisa; 1925–1993) 
-                    and Matthew Anthony "Matty" Iadanza (1920–1983). His mother was a bookkeeper and his father worked as a waste collector in Brooklyn.
-                    Danza's paternal grandparents were from Pietrelcina, Benevento, Campania, Italy, and his mother was an immigrant from the town of Campobello di Mazara in the Sicilian province of Trapani.
-                    Shortly after his college graduation from the University of Dubuque, Danza was discovered by a producer at a boxing gymnasium in New York. 
-                    He then earned a spot on the television show Taxi, playing a cab driver and part-time boxer Tony Banta, 
-                    and later starred on Who's the Boss?, in which he portrayed Tony Micelli, a former baseball player, housekeeper, and single father.
-                    For his contribution to the television industry, in 1988, Danza was honored with a star on the Hollywood Walk of Fame at 7000 Hollywood Boulevard.
-            
-        </p>
+        <fieldset>
+            <legend class="Bio"> 
+                Bio:
+            </legend>
+            <p class="intro"> Danza was born in Brooklyn, New York,[1] to parents Anna Mary (née Camisa; 1925–1993) 
+            and Matthew Anthony "Matty" Iadanza (1920–1983). His mother was a bookkeeper and his father worked as a waste collector in Brooklyn.
+            Danza's paternal grandparents were from Pietrelcina, Benevento, Campania, Italy, and his mother was an immigrant from the town of Campobello di Mazara in the Sicilian province of Trapani.
+            Shortly after his college graduation from the University of Dubuque, Danza was discovered by a producer at a boxing gymnasium in New York. 
+            He then earned a spot on the television show Taxi, playing a cab driver and part-time boxer Tony Banta, 
+            and later starred on Who's the Boss?, in which he portrayed Tony Micelli, a former baseball player, housekeeper, and single father.
+            For his contribution to the television industry, in 1988, Danza was honored with a star on the Hollywood Walk of Fame at 7000 Hollywood Boulevard.
+            </p>
+        </fieldset>    
  
             <h2>Tony is a long time Brooklyn resident.
 
