larger link font-size

--- a/code/adam/HTML_CSS_FLASK/lab1Bio/index.html
+++ b/code/adam/HTML_CSS_FLASK/lab1Bio/index.html
@@ -17,10 +17,10 @@
         <img src="tonydanza.jpg" alt="sorry! 😢failed to load">
         <a class="link" href="https://en.wikipedia.org/wiki/Tony_Danza">
             <br/>
-            Learn about Tony here
+            Learn about more Tony here
         </a> 
         <fieldset>
-            <legend class="Bio"> 
+            <legend class="bio"> 
                 Bio:
             </legend>
             <p class="intro"> Danza was born in Brooklyn, New York,[1] to parents Anna Mary (née Camisa; 1925–1993) 
