larger link font-size

--- a/code/adam/HTML_CSS_FLASK/lab1Bio/index.html
+++ b/code/adam/HTML_CSS_FLASK/lab1Bio/index.html
@@ -14,7 +14,7 @@
     <h1>Lets talk about TONY DANZA!</h1>
     <h3>The tap dance extravaganza</h3>
     <hr />
-        <img src="tonydanza.jpg" alt="sorry! 😢failed to load">
+        <img src="tonydanza.jpg" alt="Tony Danza, boxing shorts.">
         <a class="link" href="https://en.wikipedia.org/wiki/Tony_Danza">
             <br/>
             Learn about more Tony here
